--- a/50-59.ipynb
+++ b/50-59.ipynb
@@ -610,7 +610,7 @@
     "\n",
     "print(CATEGORIES_DIC_inv[3],\" top 10:\",','.join(np.array(count_vect.get_feature_names())[top10[3]]))\n",
     "print(CATEGORIES_DIC_inv[3],\" bottom 10:\",','.join(np.array(count_vect.get_feature_names())[bottom10[3]]))\n",
-    "# 見た感じどうやら値が低いほうが特徴を表しているっぽい"
+    "# 見た感じどうやら値が低いほうが特徴を表しているっぽいなぁなんでだろう"
    ]
   },
   {
@@ -2964,6 +2964,18 @@
    "display_name": "Python 3.8.2 64-bit ('nlp-100-knocks-2020-UTXiV_Xd-py3.8': venv)",
    "language": "python",
    "name": "python38264bitnlp100knocks2020utxivxdpy38venv6f1bdc414e1c42079574c87f4d492959"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
